--- a/03.equipment.md
+++ b/03.equipment.md
@@ -2,13 +2,6 @@
 
 _Exhaustive_ list of gear and equipment required for the Carnival.
 
-:::{admonition} Incomplete!
-:class: danger
-
-This section is work in progress. Check back later.
-
-:::
-
 (equipment:tents)=
 ## Tents, tables and chairs
 
@@ -16,48 +9,51 @@ All equipment lists below do not mention tents, tables and chairs, as they are l
 
 | | Tents | Tables | Chairs | 
 |-|-|-|-|
-| Registration + hire | 3x3m Marquee<br/>(thick aluminum frame) | 2 large | 4 |
-| IT team, download | 3x3m Marquee | 2 large + 1 medium | 4 |
+| Registration + hire | 3x3m Marquee<br/>(thick aluminum frame) | 2 large | 4 heavy |
+| IT team, download | 3x3m Marquee | 2 large<br/>2 small | 4 heavy |
 | Result screens | 3x3m Marquee | 0 | 0 |
-| Commentary tent | 3x3m Marquee | 1 large | 2 |
-| Come-and-try | 3x3m light tent | 1 medium | 2 |
+| Commentary tent | 3x3m Marquee | 1 large | 1 heavy |
+| Come-and-try | 2.5x2.5m light tent | 1 medium | 2 light |
 | Kids' tent | Saturday (new) tent | 0 | 0 |
-| Start | two 3x3m light tents | 2 large? | 2 |
-| **TOTAL** | 8 | 9 | 14 |
+| Start | two 2.5x2.5m light tents | 2 medium (foldable) | 2 light |
+| **TOTAL** | 4 Marquee<br/>1 Saturday<br/>3 light | 5 large<br/>3 medium<br/>2 small | 9 heavy<br/>4 light |
 
 - additional (camping) chairs should be brought by the volunteers themselves
+- one of the start tents to be used for gate marshals on LONG
 
-Unused tents:
-- 3x3m light tents: 1 remaining (check condition! and exact size)
+**Spare tents and tables:**
+
+- 2.5x2.5m light tents: 1 remaining (check condition)
 - 3x6m heavy OZtrail tent: 1 remaining, brocken
 - Dome tent
 - Iskhakovs' 3x6m heavy OZtrail tent: 1 remaining
 - Scowns' 3x3m heavy OZtrail tent: 1 remaining
-
+- ? small tables in the Shed
 
 (equipment:arena)=
 ## General arena equipment
 
-Right five columns indicate whether the item is required for the individual events  
+Right column indicates whether the item is required for the individual events  
 (WARM-UP, MASS, MIDDLE, SPRINT, LONG)
 
-| # | Item | From | Quantity | Usage |
-|-:|-|-|:-:|:-:|
-| 1 | Tent walls | Shed | 12 Marquee, 3 Sat, 2 Dome | ☑ ☑ ☑ ☑ ☑ |
-| 2 | Tent weights | Shed | ? sand bags<br/>? water canisters | ☑ ☑ ☑ ☑ ☑ |
-| 2 | Flag `OACT`,`Orienteering` | Shed | 4 | ☑ ☑ ☑ ☑ ☑ |
-| 3 | Crowd control barriers | Arpad | 4-5 | ☑ ☑ ☑ ☑ ☑ |
-| 4 | Orienteering Australia banners | Arpad | 4-5 | ☑ ☑ ☑ ☑ ☑ |
-| 7 | Press wall 2.4x3m | Arpad | 1 | ☑ ☑ ☑ ☑ ☑ |
-| 8 | Podium | ONSW | 1 | ◻︎ ☑ ◻︎ ◻︎ ☑ |
-| 9 | Toiletries | Shed | - | ◻︎ ☑ ◻︎ ◻︎ ☑ |
-| 10 | Garbage bags | Shed | 1 roll | ☑ ☑ ☑ ☑ ☑ |
-| 11 | Signage: tent signs | make | - | ☑ ☑ ☑ ☑ ☑ |
-| 12 | Signage: navigation | make | - | ☑ ☑ ☑ ☑ ☑ |
-| 13 | Signage: traffic alerts | Shed | `Runners on Road` 6+4<br/>`Caution` 2 | ☑ ☑ ☑ ☑ ☑ |
-| 14 | Water containers | Shed | ? | ☑ ☑ ☑ ☑ ☑ |
-| 15 | First aid kit | Office | ? | ☑ ☑ ☑ ☑ ☑ |
-| 16 | Defibrillator | Office | ? | ☑ ☑ ☑ ☑ ☑ |
+| Item | From | Quantity | Usage |
+|-|-|:-:|:-:|
+| Tent walls | Shed | 12 Marquee, 3 Sat, 2 Dome | ☑ ☑ ☑ ☑ ☑ |
+| Tent weights | Shed | 4 shopping bags per tent<br/>to be filled with sand/rocks | ☑ ☑ ☑ ☑ ☑ |
+| `OACT`,`Orienteering` banners | Shed | 4 ? | ☑ ☑ ☑ ☑ ☑ |
+| Toiletries | Shed | - | ◻︎ ☑ ◻︎ ◻︎ ☑ |
+| Garbage bins+bags | Shed | 2 sets | ☑ ☑ ☑ ☑ ☑ |
+| Signage: tent signs | make | - | ☑ ☑ ☑ ☑ ☑ |
+| Signage: navigation | make | - | ☑ ☑ ☑ ☑ ☑ |
+| Signage: traffic alerts | Shed | `Runners on Road` 6+4<br/>`Caution` 2 | ☑ ☑ ☑ ☑ ☑ |
+| Stakes for navigation sign | Shed | 6-8 | ☑ ☑ ☑ ☑ ☑ |
+| Water containers | Shed | 4 | ☑ ☑ ☑ ☑ ☑ |
+| First aid kit | Office | 1 | ☑ ☑ ☑ ☑ ☑ |
+| Defibrillator | Office | 1 | ☑ ☑ ☑ ☑ ☑ |
+| Press wall 2.4x3m | Arpad | 1 | ☑ ☑ ☑ ☑ ☑ |
+| Podium | ONSW | 1 | ◻︎ ☑ ◻︎ ◻︎ ☑ |
+| Crowd control barriers | Arpad | 4-5 | ☑ ☑ ☑ ☑ ☑ |
+| Orienteering Australia banners | Arpad | 4-5 | ☑ ☑ ☑ ☑ ☑ |
 
 > TODO: Use office A3 laminator and printer for making signage
 
@@ -66,18 +62,17 @@ Right five columns indicate whether the item is required for the individual even
 The following items have to make it to the dinner:
 - podium
 - press wall
-- 1 table for prizes (but maybe the venue has a table?)
+- 1 table for prizes (unless the venue has a table)
 - diplomas, certificates, medals, prizes
 
-> TODO: they do have audio/PA system?
+> TODO: they do have audio/PA system?  
 > TODO: will there be a projector for photos?
-
 
 (equipment:it)=
 ## Central IT tent
 
 - All IT equipment is used in all events
-- All computers is picked up from OACT office, Bill Jones
+- All computers are picked up from OACT office, Bill Jones
 
 :::{admonition} Incomplete!
 :class: danger
@@ -87,49 +82,50 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
 :::
 
 
-| # | Item | Quantity | Comment |
-|-:|-|:-:|-|
-| 1 | Dell Inspiron: MAPPING laptop | 1 | |
-| 2 | Thinkpad: SPRINT laptop | 1 | Main server |
-| 3 | Set A laptop | 1 |  |
-| 4 | Set B laptop | 1 |  |
-|  | External monitor (?) | 1 |
-| 6 | Network router + cables | 1 |
-| 7 | Access point/extender | 1 |
-| 7 | Split printer | 1 |
-| 8 | A4 printer | 1 |
-| 9 | SI: download unit | 2 | |
-| 9 | Power banks, OACT | 1 |
-| 10 | Power banks, Fedor | 3 | |
-| 11 | Petrol generator, Honda | 1 | |
-| 12 | Electric cables and powerboards | 5? | |
-|  | Sun hood(?) | ? | Laptop screens are next to impossible to see in the sun |
+| Item | Quantity | Comment |
+|-|:-:|-|
+| Thinkpad: SPRINT laptop | 1 | Main server, download |
+| Set A laptop | 1 | Backup download |
+| Set B laptop | 1 | Inquiries |
+| External monitor | 1 | For Inquiries |
+| Network router + cables | 1 |
+| Access point/extender | 1 |
+| Split printer | 1 | |
+| A4 printer | 1 | |
+| SI: download unit | 2 | |
+| Power banks, OACT | 1 | |
+| Power banks, Fedor | 3 | |
+| Petrol generator, Honda | 1 | |
+| Electric cables and powerboards | 5? | |
+| Sun hood(?) | ? | Laptop screens are next to impossible to see in the sun |
 
 ### + finish equipment
 
-| # | Item | Quantity | Comment |
-|-:|-|:-:|-|
-| 1 | SI: finish station | 2 | |
-| 2 | Finish arch | 2 | Ori brings from ONSW, to be used in MASS, SPRINT, LONG |
-| 3 | Flag `Finish` | 2 | or arch? |
-| 4 | Bunting | 50m | For finish corridors |
+| Item | Quantity | Comment |
+|-|:-:|-|
+| SI: finish station | 2 | |
+| Flag `Finish` | 2 | or arch? |
+| Bunting | 50m | For finish corridors |
+| Pigtail stakes | 10 | For finish corridors |
+
+- OACT Shed have a foldable finish banner on stands
 
 ### + screens tent
 
-| # | Item | Quantity | Comment |
-|-:|-|:-:|-|
-| 1 | TV, 40" | 2? | Trying to buy another TV |
-| 2 | TV stand | 1? | Or just use the structure of the tent? |
-| 3 | Power source | ? | Battery or generator? |
+| Item | Quantity | Comment |
+|-|:-:|-|
+| TV, 40" | 2? | Trying to buy another TV |
+| Mini-computer | 2 | Raspberry Pi, Fire stick |
+| Power cables and boards | 1 | |
 
 ### + radio controls `meshO`
 
-| # | Item | Quantity | Comment |
-|-:|-|:-:|-|
-| 1 | meshO Prime unit | 1 | [Connected to Download server](computers:scematic) |
-| 2 | 8m mast | 1 | To be set up at IT tent |
-| 3 | meshO Diagnostics laptop+unit | 1 | To be operated independently |
-| 4 | meshO equipment | as needed | see separate radio plans |
+| Item | Quantity | Comment |
+|-|:-:|-|
+| meshO Prime unit | 1 | [Connected to Download server](computers:scematic) |
+| 8m mast | 1 | To be set up at IT tent |
+| meshO Diagnostics laptop+unit | 1 | To be operated independently |
+| meshO equipment | as needed | see separate radio plans |
 
 - meshO equipment to be managed by Tate Needham
 
@@ -147,37 +143,33 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
   - lost and found
   - general information
 
+| Item | Quantity | Comment |
+|-|:-:|-|
+| Money box (cash) | 1 | |
+| EFTPOS terminal | 1 | |
+| Information materials | | Including Bulletin and Operations Manual printed out |
+| Competitors' bags | exact | Will be prepared beforehand |
+| EOD forms | 100 | |
+| SI-Air chips for hire | ? | See below |
+| Map boards for hire | 3 boxes | See below |
+| Stationary | | To keep track of hires |
 
-- 1 table + 2 chairs for registration
-- 1 table + 2 chairs for map board hire
-
-- ipad (or two) for registrations
-
-| # | Item | Quantity | Comment |
-|-:|-|:-:|-|
-| 1 | Competitors' bags | exact | Will be prepared beforehand |
-| 2 | Money box (cash) | 1 | |
-| 3 | EFTPOS terminal | 1 | |
-| 1 | | | |
-| 1 | | | |
-| 1 | | | |
-| 1 | | | |
+> TODO: make EOD forms
 
 ### + competitors' bags
 
-| # | Item | Quantity | Comment |
+| Item | Quantity | Comment |
 |-:|-|:-:|-|
 | 1 | Bib | 1 per bag | for all registered competitors |
 | 2 | Zip ties | 4 per bag | for all registered competitors |
 | 3 | SI-Air chip | $\le$ 1 | if chip is rented and paid online |
 | 4 | Merchandise | | from the sponsors and partners |
 
-> TODO: zip ties to be picked up from the Shed
 > TODO: attach sticker with start times, paid hires to the bib and bag
 
 ### + map board and SI-Air hire
 
-| # | Item | Quantity | Comment |
+| Item | Quantity | Comment |
 |-:|-|:-:|-|
 | 1 | Map boards from OACT | 30 | Repair required ? |
 | 2 | Map boards from ONSW | 30 |  |
@@ -195,14 +187,15 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
 - All computers is picked up from OACT office, Bill Jones
 - Commentary tent is controlling all audio equipment
 
-> *TODO:* discuss equipment with Arpad directly
+> TODO: discuss equipment with Arpad directly
 
-| # | Item | Quantity | Comment |
-|-:|-|:-:|-|
-| 1 | Acer Spin: MTBO laptop | 1 | Small, but with external monitor, good battery life |
-| 2 | External monitor, 12V | 1 | Powered by the power bank |
-| 3 | Microphone | 1 | |
-| | Mixer/PA system controls ? | | |
+| Item | Quantity | Comment |
+|-|:-:|-|
+| Acer Spin: MTBO laptop | 1 | Small, but with external monitor, good battery life |
+| External monitor, 12V | 1 | Powered by the power bank |
+| Power banks | 2 | |
+| Microphone | 1 | |
+| Mixer/PA system controls ? | | |
 
 
 (equipment:cometry)=
@@ -212,60 +205,60 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
 - Operates on all events, see [schedule](01.schedule.md) for details
 - Manned by [several coaches](people:cometry)
 
-| # | Item | Quantity | Comment |
-|-:|-|:-:|-|
-| 1 | Sample maps | 5-10 | From? |
-| 2 | Sample control | 1 | From? |
-| 3 | Flag `Ask me` | 2 | From shed |
-| 1 | | | |
+| Item | Quantity | Comment |
+|-|:-:|-|
+| Sample maps | 5-10 | Coaches to provide |
+| Sample control | 1 |  |
+| `Ask me` banner | 2 | From shed |
+| | | |
 
 
 (equipment:start)=
 ## Start set
 
-- bunting!
-- tent, table, chairs
-- clock(s?)
+- two sets of equipment for two separate starts on MASS, MIDDLE
+- Cath will be carrying start equipment
 
-| # | Item | Quantity | Comment |
-|-:|-|:-:|-|
-|  | 2.5x2.5 tents | 2 |  |
-|  | Med tables | 2 |  |
-|  | Chairs |  | light + bring their own |
-| 1 | `Start` banners | 1+1 | One for each of two starts |
-| 2 | Map boxes | 7+4 ? | |
-| 3 | Stands for CLEAR/CHECK/PUNCH START | 3+4 | |
-| 4 | Start clock | 4 | Two for each start ? |
+| Item | Quantity | Comment |
+|-|:-:|-|
+| 2.5x2.5 tents | 2 |  |
+| Medium tables | 2 | Foldable medium tables |
+| Chairs | 2 | light + bring their own |
+| `Start` banners | 1+1 | One for each of two starts |
+| Map boxes | 7+4 ? | |
+| Stands for CLEAR/CHECK/PUNCH START | 3+4 | |
+| SI units for the start | 2 sets | To be provided by IT team |
+| Start clock | 4 | Two for each start ? |
+| Pigtail stakes | 10 | For start corridors |
+| Bunting | 50m | For start corridors |
+| Wash away paint | 1 can| As alternative for bunting |
+
 
 ## Course setting gear
 
 
-| # | Item | Quantity | Comment |
+| Item | Quantity | Comment |
 |-:|-|:-:|-|
 | 1 | Controls stands |  | Total $\approx$ 120 stands |
 | 2 | Controls flags | ? |  |
-| 3 | SI units BS11 | as needed | Very useful for BS-11 units |
-| 4 | Magnetic on/off stick for BS11 SI units | many ? | Stored with SI units |
-| 5 | Control setters vest | 2 | Very useful for BS-11 units |
-| 6 | Battery powered drill | ? | For setting controls in hard ground |
-| 7 | Hammer + steel stake | 1 | For setting controls in hard ground |
+| 3 | SI units BS11 | as needed | |
+| 4 | Magnetic on/off stick for BS11 SI units | 10 | Stored with SI units |
+| 5 | Control setters vest | 4 | Very useful for BS-11 units |
+| 6 | Battery powered drill | own | For setting controls in hard ground |
 
-- How many stands in total? Approximately 120
 - More stand to arrive as John and Ann arrange
 - More control flags are available from John and Ann if needed
 - Check out [strategies for placing controls in hard ground](setting:hard_ground)
 
-> TODO: test the hard ground strategies
-
 ## Parking team gear
 
-| # | Item | Quantity | Comment |
-|-:|-|:-:|-|
-| 1 | High-viz vests | ? | To be used by all parking and traffic marshals |
-| 2 | Traffic cones | ? | To mark parking lanes |
-| 3 | Bunting | ? | To mark parking lanes |
-| 4 | Gate marshals: chairs, umbrellas? | | |
-| 5 | Traffic marshals: signs? | | |
+| Item | Quantity | Comment |
+|-|:-:|-|
+| High-viz vests | 10 | To be used by all parking and traffic marshals |
+| Traffic cones | 10 | To mark parking lanes |
+| Bunting | 50m | To mark parking lanes |
+| Traffic marshals: signs? | | For MASS and MIDDLE |
+| Gate marshals: tent and chair | 1+1 | Use of the start at LONG |
 
 
 
