--- a/03.equipment.md
+++ b/03.equipment.md
@@ -159,25 +159,25 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
 ### + competitors' bags
 
 | Item | Quantity | Comment |
-|-:|-|:-:|-|
-| 1 | Bib | 1 per bag | for all registered competitors |
-| 2 | Zip ties | 4 per bag | for all registered competitors |
-| 3 | SI-Air chip | $\le$ 1 | if chip is rented and paid online |
-| 4 | Merchandise | | from the sponsors and partners |
+|-|:-:|-|
+| Bib | 1 per bag | for all registered competitors |
+| Zip ties | 4 per bag | for all registered competitors |
+| SI-Air chip | $\le$ 1 | if chip is rented and paid online |
+| Merchandise | | from the sponsors and partners |
 
 > TODO: attach sticker with start times, paid hires to the bib and bag
 
 ### + map board and SI-Air hire
 
 | Item | Quantity | Comment |
-|-:|-|:-:|-|
-| 1 | Map boards from OACT | 30 | Repair required ? |
-| 2 | Map boards from ONSW | 30 |  |
-| 3 | Map boards from ? | ? |  |
-| 4 | SI-Air chips, OACT | ? |  |
-| 5 | SI-Air chips, ONSW | ? |  |
-| 6 | SI-Air chips, Colin Price | ? |  |
-| 7 | SI-Air chips, Livint-it-live | ? |  |
+|-|:-:|-|
+| Map boards from OACT | 30 | Repair required ? |
+| Map boards from ONSW | 30 |  |
+| Map boards from ? | ? |  |
+| SI-Air chips, OACT | ? |  |
+| SI-Air chips, ONSW | ? |  |
+| SI-Air chips, Colin Price | ? |  |
+| SI-Air chips, Livint-it-live | ? |  |
 
 
 (equipment:commentator)=
@@ -210,7 +210,6 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
 | Sample maps | 5-10 | Coaches to provide |
 | Sample control | 1 |  |
 | `Ask me` banner | 2 | From shed |
-| | | |
 
 
 (equipment:start)=
@@ -238,13 +237,13 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
 
 
 | Item | Quantity | Comment |
-|-:|-|:-:|-|
-| 1 | Controls stands |  | Total $\approx$ 120 stands |
-| 2 | Controls flags | ? |  |
-| 3 | SI units BS11 | as needed | |
-| 4 | Magnetic on/off stick for BS11 SI units | 10 | Stored with SI units |
-| 5 | Control setters vest | 4 | Very useful for BS-11 units |
-| 6 | Battery powered drill | own | For setting controls in hard ground |
+|-|:-:|-|
+| Controls stands |  | Total $\approx$ 120 stands |
+| Controls flags | ? |  |
+| SI units BS11 | as needed | |
+| Magnetic on/off stick for BS11 SI units | 10 | Stored with SI units |
+| Control setters vest | 4 | Very useful for BS-11 units |
+| Battery powered drill | own | For setting controls in hard ground |
 
 - More stand to arrive as John and Ann arrange
 - More control flags are available from John and Ann if needed
