--- a/02.people.md
+++ b/02.people.md
@@ -78,12 +78,12 @@ We will be thankful even if you can help during one day, or just some hours.
 | Alison Inglis | Champ starts | MIDDLE, SPRINT |
 | Peter Miller | Champ starts | MIDDLE, SPRINT |
 | Jenny Bourne | Champ starts | WARMUP, MASS |
+| Geoff Lawford | Champ starts | WARMUP, MASS |
 | Ronaldo Santos | Champ starts | WARMUP |
 | ? | Champ starts | ? |
 | Toni Brown | Carnival starts | WARMUP, MIDDLE, SPRINT, LONG |
 | Pat Miethke | Champ starts | MASS, LONG |
 | Melisa Donaldson | Carnival starts | MASS, LONG |
-| Emma Penton | Carnival starts | MASS |
 | ? | Carnival starts | ? |
 
 :::{admonition} Call for volunteers
@@ -220,9 +220,8 @@ We need 4-6 volunteers to fill the `start team` roles.
 | Andrew Cumming Thom | Parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
 | David Poland | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
 | Andrew Cumming Thom | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
-| Ronaldo Santos ? | Gate marshal | LONG, Oct 20, Sunday 7:30 - 10:00 |
-| Lisa McLaughlin | Gate marshal | LONG, Oct 20, Sunday 10:00 - 12:20 |
-| ? | Gate marshal | LONG, Oct 20, Sunday 12:30 - 16:00 |
+| Ronaldo Santos | Gate marshal | LONG, Oct 20, Sunday 7:30 - 16:00 |
+| Lisa McLaughlin | Gate marshal | LONG, Oct 20, Sunday 12:30 - 16:00 |
 
 :::{admonition} Call for volunteers
 :class: danger
@@ -255,10 +254,9 @@ And probably three more people for the very special role of gate keeping at the 
 
 | Name | Role | When |
 |:-|-:|-:|
-| Ksenia Maksimova | Supervisor | Thursday |
-| ? | Supervisor | Friday |
-| ? | Supervisor | Saturday |
-| Emma Penton | Supervisor | Sunday |
+| Ksenia Maksimova | Supervisor | WARMUP |
+| ? | Supervisor | MIDDLE, SPRINT (Saturday) |
+| Emma Penton | Supervisor | MASS, LONG |
 
 (people:controls)=
 ## Controls setup and collection
@@ -276,8 +274,8 @@ We need more helpers to collect controls after the events.  Please, see the tabl
 
 | Event | Setup | Collection |
 |:-|-:|-:|
-| WARM-UP | Marina<br/>Ariadna | Marina<br/>Alysha<br/>Ken Young<br/>Ronaldo Santos |
+| WARM-UP | Marina<br/>Ariadna | Marina<br/>Alysha<br/>Ken Young<br/>Ari Piiroinen<br/>Jesse Piiroinen |
 | MASS | Cathy | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis<br/>Shannon Jones<br/>Rebecca Minty|
 | MIDDLE | Michael<br/>Emily<br/>Tom | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell |
 | SPRINT | Eoin<br/>Cath | Eoin<br/>Cath<br/>Alysha<br/>Ken Young |
-| LONG | Marina<br/>Fedor | Emily<br/>Tom<br/>Cathy Hogg<br/>Ken Young<br/>**+2 people** |
+| LONG | Marina<br/>Fedor | Emily<br/>Tom<br/>Cathy Hogg<br/>Ken Young<br/>Rohan Hyslop<br/>**+1 person** |
