--- a/02.people.md
+++ b/02.people.md
@@ -56,7 +56,7 @@ We will be thankful even if you can help during one day, or just some hours.
 | John Harding | Photography | yes |
 | Kelvin Meng | Photography | Friday, Saturday, Sunday |
 | Tom De Jong | Photography | all events |
-| Tash Thackray  | Photography | ? |
+| Tash Thackray  | Photography | Dinner |
 
 (people:start)=
 ## Start team 
@@ -83,7 +83,8 @@ We will be thankful even if you can help during one day, or just some hours.
 | ? | Champ starts | ? |
 | Toni Brown | Carnival starts | WARMUP, MIDDLE, SPRINT, LONG |
 | Pat Miethke | Champ starts | MASS, LONG |
-| Melisa Donaldson | Carnival starts | MASS, LONG |
+| Melisa Donaldson | Carnival starts | LONG |
+| Lisa McLaughlin |  Carnival starts | LONG |
 | ? | Carnival starts | ? |
 
 :::{admonition} Call for volunteers
@@ -221,7 +222,6 @@ We need 4-6 volunteers to fill the `start team` roles.
 | David Poland | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
 | Andrew Cumming Thom | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
 | Ronaldo Santos | Gate marshal | LONG, Oct 20, Sunday 7:30 - 16:00 |
-| Lisa McLaughlin | Gate marshal | LONG, Oct 20, Sunday 12:30 - 16:00 |
 
 :::{admonition} Call for volunteers
 :class: danger
