--- a/04.computers.md
+++ b/04.computers.md
@@ -25,12 +25,75 @@ This page contains the information for the **IT team**.
 
 ### Network setup
 
+**Router NETGEAR AC1200**
 
-### MeOS setup
+Internal admin panel
+- IP `192.168.0.1`
+- user `admin`
+- pass `1111` 
 
-- MeOS is run on several computers
-- MySQL database is used to store the data 
-  * pass `MeOS2024`
+Fixed IP addresses:
+- `192.168.0.10` - SPRINT "Download server" laptop
+
+**Access point**
+
+- To be fixed to the tent pole
+- Power over Ethernet (PoE) injector with power adapter
+- IP ?
+
+### Computers setup
+
+**SPRINT "Download server" laptop**
+
+- MeOS in network mode
+- MySQL database
+  * Address: `192.168.0.10:3306`
+  * pass `OACT`
+- Competition information is stored in MySQL database
+- Results export + oScreen scripts for display
+- oScreen parser-and-server (see setup below)
+- serial monitor for meshO diagnostics log (see setup below)
+
+> TODO: Upload competition to the MySQL database beforehand
+
+**OACT21 "Enquiries" laptop**
+
+- MeOS in network mode
+- Connect to MySQL database on the SPRINT "Download server" laptop
+- Online results (see setup below)
+
+**OACT22 "Backup download" laptop**
+
+- Independent stand-alone MeOS instance
+
+**MTBO AcerOne laptop**
+
+- MeOS in network mode
+- Connect to MySQL database on the SPRINT "Download server" laptop
+- Announcer screen in MeOS
+
+
+### oScreen parser-and-server setup
+
+- URL: `http://192.168.0.10:5000?kiosk_id=NNN`
+
+
+### Online results
+
+Online results are to be set up on OACT21 "Enquiries" laptop.
+
+- Start `Online Results` service in MeOS
+- Run every 15 sec
+- Check
+- 
+- URL `https://www.melin.nu/online/emma/emmaupdate.php`
+- Competition IDs:
+  * Warm-up: 31547
+  * Mass: 31548
+  * Sprint: 31550
+  * Middle: 31549
+  * Long: 31551
+- Password: `I<3mtbo`
 
 
 
