--- a/04.computers.md
+++ b/04.computers.md
@@ -1,12 +1,5 @@
 # 💻 IT setup and notes
 
-:::{admonition} Incomplete!
-:class: danger
-
-This section is work in progress. Check back later.
-
-:::
-
 This page contains the information for the **IT team**.
 
 - People: [IT team](people:computers)
@@ -66,17 +59,20 @@ Fixed IP addresses:
 
 - Independent stand-alone MeOS instance
 
-**MTBO AcerOne laptop**
+**MTBO Acer Spin laptop**
 
 - MeOS in network mode
 - Connect to MySQL database on the SPRINT "Download server" laptop
 - Announcer screen in MeOS
 
 
-### oScreen parser-and-server setup
+### oScreen setup
+
+> TODO: Add setup instructions for the server
+
+Setup on the screens:
 
 - URL: `http://192.168.0.10:5000?kiosk_id=NNN`
-
 
 ### Online results
 
@@ -95,5 +91,12 @@ Online results are to be set up on OACT21 "Enquiries" laptop.
   * Long: 31551
 - Password: `I<3mtbo`
 
+### meshO diagnostics setup
 
+- Radio meshO Prime unit is to be connected to the SPRINT "Download server" laptop
+- The unit provides two COM interfaces: 
+  1. For MeOS punch import, appears as SI dongle
+  2. For diagnostics log, VS Code serial monitor can be used to monitor the log
 
+- In addition, a separate meshO Diagnostics unit can be connected to a separate laptop where Digi XCTU software can be used to diagnose the mesh network
+- Tate will run this diagnostics
