--- a/04.computers.md
+++ b/04.computers.md
@@ -99,4 +99,4 @@ Online results are to be set up on OACT21 "Enquiries" laptop.
   2. For diagnostics log, VS Code serial monitor can be used to monitor the log
 
 - In addition, a separate meshO Diagnostics unit can be connected to a separate laptop where Digi XCTU software can be used to diagnose the mesh network
-- Tate will run this diagnostics
+- Tate will run these diagnostics
