--- a/01.schedule.md
+++ b/01.schedule.md
@@ -29,7 +29,7 @@
 | Oct 15 | All equipment transferred from the shed | Fedor |
 | Oct 15, 20:00 | ➡️ Team Zoom meeting ⬅️ | **Everyone** |
 | Oct 16 | Competitors bags 🛍 packed and sorted | Emily, Marina |
-| Oct 16 | Final coordination with Blue Lightning Stall 🧁 | Marina, Driedre |
+| Oct 16 | Final coordination with Blue Lightning Stall 🧁 | Marina, Diedre |
 | Oct 16 | Charge up batteries and power banks 🔋 | Fedor |
 
 (schedule:warmup)=
@@ -50,13 +50,13 @@
 | 16:00 - 18:30| Blue Lightning Stall 🧁 | Deirdre |
 | 16:00 - 19:00 | Mojo Bike Repairs 🔧 | Chris |
 | 16:30 - 17:00 | Stretching with Yoga for Posture 🧘 | Elena |
-| 16:30 - 19:00 | Kids' tent 👦 | ? |
+| 16:30 - 19:00 | Kids' tent 👦 | Ksenia Maksimova |
 | 16:30 - 17:00 | Start 🚀 setup | `start team` |
 | 17:00 - 18:00 | 🚴‍♀️ **Start window for WARM-UP** | `start team` |
 | 18:00 - 18:30 | Start 🚀 pack up | `start team` |
 | 18:30 - 21:30 | 🍷 Social Drinks at *The Verandah* at *Alivio Tourist Park* | [Location](https://maps.app.goo.gl/Wte5veujM1qiDF4T9) | |
 | 19:00 | **WARM-UP course closure** 🏁 | |
-| 19:00 - 20:00 | Controls collection | Marina, ? |
+| 19:00 - 20:00 | Controls collection | [See roster](people:controls) |
 | 19:00 - 20:00 | Arena 🎪 pack up | Sergei, `arena team` |
 | 19:20 | 🌅 Sunset | |
 | by 21:00 | Everyone leaves Bruce Ridge | |
@@ -90,7 +90,7 @@
 | Aprx. 18:45 | Presentation ceremony 🏆 for MASS | Marina, Veronika, Cathy, Belinda |
 | 19:00 | **MASS course closure** 🏁 | |
 | 19:00 - 20:00 | Arena 🎪 pack up | `arena team` |
-| 19:00 - 20:00 | Controls collection | Cathy, Belinda, Jo, Susie,<br/>Alison, Shannon, Rebecca |
+| 19:00 - 20:00 | Controls collection | [See roster](people:controls) |
 | 19:21 | 🌅 Sunset | |
 | by 21:00 | Publish official results 🧾 for MASS | Marina, Fedor |
 | by 21:00 | Everyone leaves West Stromlo | |
@@ -122,7 +122,7 @@
 | 9:30 - 12:00 | Massage 💆‍♀️ by Physio Sport | Cassandra |
 | 10:00 - 10:30 | Start 🚀 pack up and relocation | `start team` |
 | 12:00 | **MIDDLE course closure** 🏁 | |
-| 12:00 - 14:00 | Controls collection | Michael, Emily, Tom, Emily, Matt |
+| 12:00 - 14:00 | Controls collection | [See roster](people:controls) |
 | 12:00 - 12:20 | Arena relocation 🎪 | Fedor, Sergei, `arena team` |
 | by 13:00 | Everyone leaves Jerrabomberra | |
 | by 14:00 | Publish official results 🧾 for MIDDLE | Marina, Fedor |
@@ -151,7 +151,7 @@
 | 15:30 - 16:30 | Start 🚀 pack up | `start team` |
 | 16:30 | **SPRINT course closure** 🏁 | |
 | 16:30 - 17:00 | Starts pack up | `start team` |
-| 16:30 - 17:00 | Controls collection | Eoin, Cath, 3? |
+| 16:30 - 17:00 | Controls collection | [See roster](people:controls) |
 | 16:30 - 17:30 | Arena 🎪 pack up | `arena team` |
 | by 17:30 | Everyone leaves Sutton Road | |
 | by 18:30 | Publish official results 🧾 for SPRINT | Marina, Fedor |
@@ -198,7 +198,7 @@ at **Harmonie German Club**
 | 10:30 - 11:30 | Start 🚀 pack up | `start team` |
 | Aprx. 12:30 | Presentation ceremony 🏆 for LONG<br/>Carnival closure ceremony | Marina, Veronika, Fedor |
 | 13:30 | **LONG course closure** 🏁 | |
-| 13:30 - 15:30 | Controls collection | 6? |
+| 13:30 - 15:30 | Controls collection | [See roster](people:controls) |
 | 13:30 - 15:30 | Arena 🎪 pack up | `arena team` |
 | 16:00 | Move toilets 🚻 outside the entry gate  | Rohan |
 | 16:00 | Kowen forest gates locked | `parking team` |
