--- a/02.people.md
+++ b/02.people.md
@@ -87,12 +87,6 @@ We will be thankful even if you can help during one day, or just some hours.
 | Lisa McLaughlin |  Carnival starts | LONG |
 | ? | Carnival starts | ? |
 
-:::{admonition} Call for volunteers
-:class: danger
-
-We need 4-6 volunteers to fill the `start team` roles.
-:::
-
 
 (people:arena)=
 ## Arena team
@@ -227,7 +221,7 @@ We need 4-6 volunteers to fill the `start team` roles.
 :class: danger
 
 We need more volunteers to be traffic marshals in the `parking team` on Friday and Saturday morning.
-And probably three more people for the very special role of gate keeping at the Kowen forest on Sunday.
+And probably two more people for the very special role of gate keeping at the Kowen forest on Sunday.
 :::
 
 
@@ -264,13 +258,8 @@ And probably three more people for the very special role of gate keeping at the 
 - as a rule, controls will be set by the course setters and controllers
 - help with setting and especially collecting controls is *greatly appreciated*
 - see the [schedule](schedule:warmup) for the course closure time for each event, after which the control collection teams will start their work
+- the ground is hard at many places, there are some strategies to deal with it, [see here](setting:hard_ground)
 - bring head torches for control collection in the evening! (WARM-UP, MASS, SPRINT)
-
-:::{admonition} Call for volunteers
-:class: danger
-
-We need more helpers to collect controls after the events.  Please, see the table below to see at which events you can contribute.
-:::
 
 | Event | Setup | Collection |
 |:-|-:|-:|
