--- a/09.course_setting.md
+++ b/09.course_setting.md
@@ -28,10 +28,14 @@ Many times the ground is too hard for the control stand to be placed in such pos
 Possible strategies:
 
 - Try to find a softer spot, but such that comeptitors can still ride by without stopping
-- Use the battery powered drill to make a hole in the ground, then place control stand in the hole
 - Use steel stake and hammer to make a hole in the ground, then place control stand in the hole
 - Use rocks to create a small mound around the control stand which should hold it upright
 
+The {bdg-success}`best` working strategy proved to be:
+- Use **battery powered drill with 10mm masonry bit** to make a hole in the ground, 8-12cm deep
+- Use standard hammer (not mallet) or a rock to hammer the control stand into the hole
+- Use the same instrument to ram the ground around the control
+This technique works even in the hardest ground including sandstone rock as shown in tests.
 
 
 ## SI units
