--- a/01.schedule.md
+++ b/01.schedule.md
@@ -83,7 +83,7 @@
 | 16:00 - 19:00 | 📣 Commentator | Arpad |
 | 16:00 - 19:30 | First-Aid officer 🚑 present | GetFirstAid |
 | 16:00 - 19:00 | Mojo Bike Repairs 🔧 | Chris |
-| 16:00 - 19:00 | Kids' tent 👦 | ? |
+| 16:00 - 19:00 | Kids' tent 👦 | Emma Penton |
 | 16:30 - 17:00 | 🚴‍♀️ **Start window for MASS** | `start team` |
 | 17:00 - 18:00 | Start 🚀 pack up | `start team` |
 | 17:15 - 19:00 | Traffic marshals 🚗 | `parking team` |
@@ -191,7 +191,7 @@ at **Harmonie German Club**
 | 8:00 - 10:00 | Mojo Bike Repairs 🔧 | Chris |
 | 8:00 - 10:00 | Come-and-try MTBO tent 🧭 | Toni, Raynie, Emily |
 | 8:30 - 12:30 | 📣 Commentator | Arpad |
-| 8:30 - 13:30 | Kids' tent 👦 | ? |
+| 8:30 - 13:30 | Kids' tent 👦 | Emma Penton |
 | 9:00 - 13:00 | First-Aid officer 🚑 present | GetFirstAid |
 | 9:00 - 10:30 | 🚴‍♀️ **Start window for LONG** | `start team` |
 | 10:00 - 13:00 | Blue Lightning Stall 🧁 | Deirdre |
