--- a/04.computers.md
+++ b/04.computers.md
@@ -100,3 +100,51 @@ Online results are to be set up on OACT21 "Enquiries" laptop.
 
 - In addition, a separate meshO Diagnostics unit can be connected to a separate laptop where Digi XCTU software can be used to diagnose the mesh network
 - Tate will run these diagnostics
+
+## meshO radio controls setup
+
+#### WARM-UP
+
+Warm-up event has one common score course: we will have radios only on start and finish.  
+Perhaps, meshO Boost unit will be needed to bring the signal through the tunnel.
+
+- 2x meshO Controls
+- 2x meshO Boost
+- 8m mast at the IT tent
+
+![](_static/mesho/arena_warmup.png)
+
+#### MASS
+
+- 5x meshO Controls
+- 2x meshO Boost
+- 8m mast at the IT tent
+- 3m mast to relay the signal over the crest of the hill
+
+![](_static/mesho/radio_mass.png)
+
+#### MIDDLE
+
+- 5x meshO Controls
+- 4x meshO Boost
+- 3x 8m masts on the hills
+ - 3x 3m masts at IT tent, start 1 and start 2
+
+![](_static/mesho/radio_test_middle.jpeg)
+
+#### SPRINT
+
+- 8x meshO Controls
+- 2x meshO Boost
+- 2x 8m masts at the IT tent and the hill
+
+![](_static/mesho/radio_sprint.png)
+
+#### LONG
+
+- 6x meshO Controls
+- 3x meshO Boost
+- 2x 8m masts at the IT tent and the hill
+- 3m mast at the old water tower
+
+![](_static/mesho/radio_long.png)
