--- a/02.people.md
+++ b/02.people.md
@@ -80,6 +80,7 @@ We will be thankful even if you can help during one day, or just some hours.
 | Jenny Bourne | Champ starts | WARMUP, MASS |
 | Geoff Lawford | Champ starts | WARMUP, MASS |
 | Ronaldo Santos | Champ starts | WARMUP |
+| Nicole Thomas | Champ starts | LONG |
 | ? | Champ starts | ? |
 | Toni Brown | Carnival starts | WARMUP, MIDDLE, SPRINT, LONG |
 | Pat Miethke | Champ starts | MASS, LONG |
@@ -208,8 +209,8 @@ We will be thankful even if you can help during one day, or just some hours.
 | David Poland | Parking marshal | MIDDLE, Oct 19, Saturday 7:00 - 9:30 |
 | Andrew Cumming Thom | Parking marshal | MIDDLE, Oct 19, Saturday 7:00 - 9:30 |
 | Frank Ingwersen | Traffic marshal | MIDDLE, Oct 19, Saturday 8:00 - 10:00 |
-| ? | Traffic marshal | MIDDLE, Oct 19, Saturday 8:00 - 12:00 |
-| ? | Traffic marshal | MIDDLE, Oct 19, Saturday 9:00 - 12:00 |
+| Nicole Thomas | Traffic marshal | MIDDLE, Oct 19, Saturday 8:00 - 12:00 |
+| Mary Ann Kulh | Traffic marshal | MIDDLE, Oct 19, Saturday 9:00 - 12:00 |
 | ? | Finish marshal | MIDDLE, Oct 19, Saturday 9:00 - 12:00 |
 | Bruce Bowen | Parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
 | Andrew Cumming Thom | Parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
