--- a/01.schedule.md
+++ b/01.schedule.md
@@ -40,7 +40,7 @@
 | When | What | Who |
 |--|--|--|
 | 6:18 | 🌅 Sunrise | |
-| 7:00 - 9:00 | Controls setup | Marina, Ariadna |
+| 7:00 - 9:00 | Controls setup | [See roster](people:controls) |
 | by 14:00 | Toilets 🚻 arrive | CBR Hire |
 | 14:00 - 15:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
 | 14:30 - 17:00 | Parking marshals 🚗 | `parking team` |
@@ -71,7 +71,7 @@
 | When | What | Who |
 |--|--|--|
 | 6:17 | 🌅 Sunrise | |
-| 12:00 - 15:00 | Controls setup | Cathy, Belinda, Jo, Susie,<br/>Alison, Shannon, Rebecca |
+| 12:00 - 15:00 | Controls setup | [See roster](people:controls) |
 | by 14:00 | Toilets 🚻 arrive | Rohan |
 | 14:00 - 15:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
 | 14:30 - 16:15 | Parking and traffic marshals 🚗 | `parking team` |
@@ -103,7 +103,7 @@
 
 | When | What | Who |
 |--|--|--|
-| 6:00 - 8:00 | Controls setup | Michael, Emily, Tom, Emily, Matt |
+| 6:00 - 8:00 | Controls setup | [See roster](people:controls) |
 | 6:16 | 🌅 Sunrise | |
 | 6:30 - 7:30 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
 | 6:30 - 8:30 | Starts A and B setup | `start team` |
@@ -134,7 +134,7 @@
 
 | When | What | Who |
 |--|--|--|
-| 10:00 - 13:00 | Controls setup | Eoin, Cath |
+| 10:00 - 13:00 | Controls setup | [See roster](people:controls) |
 | 10:30 - 14:00 | Start 🚀 setup | `start team` |
 | 12:30 - 14:00 | Parking marshals 🚗 | `parking team` |
 | 12:20 - 13:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
@@ -179,7 +179,7 @@ at **Harmonie German Club**
 
 | When | What | Who |
 |--|--|--|
-| 5:30 - 7:15 | Controls setup | Marina, Fedor |
+| 5:30 - 7:15 | Controls setup | [See roster](people:controls) |
 | 6:14 | 🌅 Sunrise | |
 | 7:00 - 8:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
 | by 7:30 | Toilets 🚻 arrive | Rohan |
