Start notes by Cath

--- a/05.start.md
+++ b/05.start.md
@@ -6,6 +6,14 @@ This page contains the information for the **Start team**.
 - Time: follow [schedule](schedule:warmup) for the `Start team` on each day
 - Gear: see the full list of [equipment](equipment:start)
 
+```{button-link} _static/pdf/start_team_notes_chalmers.pdf
+:color: primary
+:shadow:
+
+Notes for the start team by Cath Chalmers
+```
+
+
 ## Functions of the start team
 
 The main function of the start team is to ensure fairness of the competition by providing smooth and well functioning start process.  The team should:
