--- a/02.people.md
+++ b/02.people.md
@@ -81,12 +81,13 @@ We will be thankful even if you can help during one day, or just some hours.
 | Geoff Lawford | Champ starts | WARMUP, MASS |
 | Ronaldo Santos | Champ starts | WARMUP |
 | Nicole Thomas | Champ starts | LONG |
-| ? | Champ starts | ? |
 | Toni Brown | Carnival starts | WARMUP, MIDDLE, SPRINT, LONG |
-| Pat Miethke | Champ starts | MASS, LONG |
-| Melisa Donaldson | Carnival starts | LONG |
+| Cathy Hogg | Carnival starts | MASS |
+| Pat Miethke | Carnival starts | MASS, LONG |
+| Melisa Donaldson | Carnival starts | MASS, LONG |
+| ? | Carnival starts | MIDDLE |
 | Lisa McLaughlin |  Carnival starts | LONG |
-| ? | Carnival starts | ? |
+
 
 
 (people:arena)=
@@ -197,7 +198,7 @@ We will be thankful even if you can help during one day, or just some hours.
 |:-|-:|-:|
 | Axel Roberts | Parking marshal | WARM-UP, Oct 17, Thursday 14:30-17:00 |
 | Andrew Cheffers | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
-| David Poland | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
+| Frank Ingwersen | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
 | Andrew Cheffers | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | David Poland | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | Bruce Bowen | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
